@@ -2,6 +2,7 @@
 ---------------------------------------------
 - Allow old locale formats for APIv2 requests.
 - Fix ExceptionInInitializationError caused by CertificateParsingException when using Java 6 JREs.
+- Fix CertPathValidatorException: Trust anchor for certification path not found.
 - Add support for OkHttp3.
 - Add support for Google App Engine with new GoogleAppEngineRequestor.
 - Add support for require_role, force_reapprove, state, and disable_signup parameters in the OAuth 2 web-based authorization flow (DbxWebAuth).
